# Low-Latency-HFT-Data-Engine-with-Oracle-Aggregation

./: .gitattributes  .gitignore  README.md  daily_code_check.yml  env.yml
.github/workflows/: daily_code_check.yml
oracle_chain/: Anchor.toml
oracle_chain/programs/oracle_chain/: Cargo.toml
oracle_chain/programs/oracle_chain/src/: lib.rs
oracle_chain/tests/: oracle_chain.ts
oracle_manager/: Cargo.toml  tests.json  type.txt
oracle_manager/src/: api.rs  main.rs
oracle_manager/ui/: index.html
ui/: index.html
