[package]
name = "oracle_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# ✅ HTTP client
reqwest = { version = "0.11", features = ["json"] }

# ✅ Redis
redis = "0.24.0"

# ✅ PostgreSQL
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-native-tls", "postgres"] }
